# SDL2Wrap

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/gmock/: CMakeLists.txt
lib/gmock/src/: CMakeLists.txt
lib/gtest/: CMakeLists.txt
lib/gtest/src/: CMakeLists.txt
src/: CMakeLists.txt  SDL2Wrap.h
src/resource/: CMakeLists.txt  FileResource.cpp  FileResource.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
src/video/: CMakeLists.txt  Color.cpp  Color.h  Colors.h  Dimension.cpp  Dimension.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Surface.cpp  Surface.h  Texture.cpp  Texture.h  Window.cpp  Window.h
src/video/text/: CMakeLists.txt  Font.cpp  Font.h  Fonts.h  Text.cpp  Text.h
test/: CMakeLists.txt  Main.cpp
test/resources/: CMakeLists.txt  ResourceManagerTest.cpp
test/video/: CMakeLists.txt  ColorTest.cpp  DimensionTest.cpp  PointTest.cpp  RectTest.cpp  RendererTest.cpp  SurfaceTest.cpp  TextTest.cpp  TextureTest.cpp  WindowTest.cpp
